# auto-influencer-marketing

./: CLAUDE.md  Makefile  README.md  langgraph-llms-full.txt
.claude/: settings.local.json
backend/: .env.example  langgraph.json  pyproject.toml  run_tests.sh  test_graph_structure.py  test_hitl_refactor.py  test_schema_usage.py
backend/src/agent/: __init__.py  configuration.py  graph.py  influencer_marketing_graph.py
backend/src/agent/influencer_search/: ARCHITECTURE_ANALYSIS.md  graph.py  nodes.py  prompts.py  researcher.py  schemas.py  state.py  supervisor.py
backend/src/agent/phases/: __init__.py  phase1_strategy.py  phase2_discovery.py  phase3_outreach.py  phase4_cocreation.py  phase5_publish.py  phase6_monitor.py  phase7_settle.py
backend/src/agent/prompts/: instructions.py
backend/src/agent/schemas/: __init__.py  campaigns.py
backend/src/agent/state/: __init__.py  campaign_state.py  models.py  states.py
backend/src/agent/tools/: __init__.py  email_tools.py  influencity_api.py  social_media_tools.py
backend/src/agent/utils/: __init__.py  hitl.py  logging.py  message_util.py
backend/tests/: README.md  test_influencer_search_tool.py
docs/: Influencer_marketing_workflow.md  high-level_design_of_agent.md  langgraph-design-guide.md  test_task_input.txt  test_user_input.txt  任务2.0Agent设计图.excalidraw  网红营销Agent设计图.excalidraw
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatMessagesView.tsx  HumanReviewDialog.tsx
open_deep_research/: utils.py
